OverviewFragment progress. Improvements on layouts. Max/Min Temp/Humid is now from past 24 hours

--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -9,7 +9,7 @@
         android:layout_height="200dp"
         android:max="120"
         android:id="@+id/seekBarTemperature"
-        android:progress="50"
+        android:progress="0"
         android:thumb="@android:color/transparent"
         android:indeterminate="false"
         android:layout_below="@+id/textView"
@@ -20,7 +20,7 @@
         android:layout_height="200dp"
         android:max="100"
         android:id="@+id/seekBarHumidity"
-        android:progress="50"
+        android:progress="0"
         android:thumb="@android:color/transparent"
         android:indeterminate="false"
         android:layout_below="@+id/textView"
@@ -28,41 +28,10 @@
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="200dp"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="100 F"
-        android:id="@+id/textViewOverviewTemp"
-        android:gravity="center_vertical|left"
-        android:textSize="45dp"
-        android:typeface="serif"
-        android:paddingLeft="16dp"
-        android:paddingTop="16dp"
-        android:paddingRight="16dp"
-        android:layout_toEndOf="@+id/seekBarTemperature"
-        android:layout_alignTop="@+id/seekBarTemperature" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="200dp"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="100 %"
-        android:id="@+id/textViewOverviewHumid"
-        android:gravity="center_vertical|right"
-        android:textSize="45dp"
-        android:typeface="serif"
-        android:paddingLeft="16dp"
-        android:paddingTop="16dp"
-        android:paddingRight="16dp"
-        android:layout_toStartOf="@+id/seekBarHumidity"
-        android:layout_alignTop="@+id/seekBarHumidity"
-        android:layout_alignEnd="@+id/textViewWateringDuration" />
-
-    <TextView
-        android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="10:52 PM - Mon July 21"
-        android:id="@+id/textViewTemperatureDate"
+        android:text="00:00 AM"
+        android:id="@+id/textViewDate"
         android:gravity="center"
         android:typeface="serif"
         android:layout_alignTop="@+id/seekBarTemperature"
@@ -78,7 +47,7 @@
         android:textOn=""
         android:textOff=""
         android:paddingTop="50dp"
-        android:layout_alignBottom="@+id/textViewOverviewTemp"
+        android:layout_alignBottom="@+id/tempHumidLayout"
         android:layout_centerHorizontal="true" />
 
     <TextView
@@ -86,130 +55,26 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Grow Light Cycle:"
-        android:id="@+id/textViewLightingOn"
-        android:layout_below="@+id/toggleButtonLighting"
+        android:id="@+id/textView1"
+        android:layout_below="@+id/tempHumidLayout"
         android:layout_alignParentStart="true"
         android:textStyle="bold"
         android:paddingLeft="16dp"
         android:paddingTop="16dp"
         android:paddingRight="16dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Light:"
-        android:id="@+id/textView4"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:layout_below="@+id/textViewLightingOn"
-        android:layout_alignParentStart="true"
-        android:paddingBottom="16dp"
-        android:paddingTop="16dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="16 hrs"
-        android:id="@+id/textViewLightHours"
-        android:paddingBottom="16dp"
-        android:typeface="serif"
-        android:textSize="20dp"
-        android:paddingTop="13dp"
-        android:layout_below="@+id/textViewLightingOn"
-        android:layout_toRightOf="@+id/textView7" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Dark:"
-        android:id="@+id/textView2"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:paddingBottom="16dp"
-        android:paddingTop="16dp"
-        android:layout_below="@+id/textViewLightingOn"
-        android:layout_toLeftOf="@+id/textViewWateringDuration" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="08 hrs"
-        android:id="@+id/textViewDarkHours"
-        android:paddingBottom="16dp"
-        android:typeface="serif"
-        android:textSize="20dp"
-        android:paddingTop="13dp"
-        android:layout_alignTop="@+id/textView2"
-        android:layout_toRightOf="@+id/textView2" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Watering Cycle:"
-        android:id="@+id/textViewLightingOff"
+        android:id="@+id/textView3"
         android:textStyle="bold"
-        android:layout_below="@+id/textView4"
+        android:layout_below="@+id/lightingLayout"
         android:layout_alignParentStart="true"
         android:paddingLeft="16dp"
         android:paddingTop="16dp"
         android:paddingRight="16dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Every:"
-        android:id="@+id/textView7"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:paddingBottom="16dp"
-        android:layout_below="@+id/textViewLightingOff"
-        android:layout_alignParentStart="true"
-        android:paddingTop="16dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="08 hrs"
-        android:id="@+id/textViewWateringCycle"
-        android:paddingBottom="16dp"
-        android:textSize="20dp"
-        android:typeface="serif"
-        android:paddingTop="13dp"
-        android:layout_alignTop="@+id/textView7"
-        android:layout_toRightOf="@+id/textView7" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Duration"
-        android:id="@+id/textView9"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:paddingBottom="16dp"
-        android:paddingTop="16dp"
-        android:layout_below="@+id/textViewLightingOff"
-        android:layout_toRightOf="@+id/textViewOverviewTemp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="05 mins"
-        android:id="@+id/textViewWateringDuration"
-        android:paddingBottom="16dp"
-        android:textSize="20dp"
-        android:typeface="serif"
-        android:paddingTop="13dp"
-        android:layout_alignTop="@+id/textView9"
-        android:layout_toRightOf="@+id/textView9" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -223,6 +88,185 @@
         android:gravity="center"
         android:padding="5dp"
         android:textStyle="bold" />
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView3"
+        android:layout_alignParentStart="true"
+        android:id="@+id/wateringLayout"
+        android:weightSum="16">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Every:"
+            android:id="@+id/textView7"
+            android:paddingLeft="16dp"
+            android:paddingRight="3dp"
+            android:paddingBottom="16dp"
+            android:layout_below="@+id/textView3"
+            android:layout_alignParentStart="true"
+            android:paddingTop="16dp"
+            android:layout_weight="1" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="00 hrs"
+            android:id="@+id/textViewWateringCycle"
+            android:paddingBottom="16dp"
+            android:textSize="20dp"
+            android:typeface="serif"
+            android:paddingTop="13dp"
+            android:layout_alignTop="@+id/textView7"
+            android:layout_toRightOf="@+id/textView7"
+            android:layout_weight="7" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Duration"
+            android:id="@+id/textView9"
+            android:paddingLeft="16dp"
+            android:paddingRight="3dp"
+            android:paddingBottom="16dp"
+            android:paddingTop="16dp"
+            android:layout_below="@+id/textView3"
+            android:layout_toRightOf="@+id/textViewOverviewTemp"
+            android:layout_weight="1" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="00 mins"
+            android:id="@+id/textViewWateringDuration"
+            android:paddingBottom="16dp"
+            android:textSize="20dp"
+            android:typeface="serif"
+            android:paddingTop="13dp"
+            android:layout_alignTop="@+id/textView9"
+            android:layout_toRightOf="@+id/textView9"
+            android:layout_weight="7"
+            android:paddingRight="16dp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView1"
+        android:layout_alignParentStart="true"
+        android:id="@+id/lightingLayout"
+        android:weightSum="16">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Dark:"
+            android:id="@+id/textView2"
+            android:paddingLeft="16dp"
+            android:paddingRight="3dp"
+            android:paddingBottom="16dp"
+            android:paddingTop="16dp"
+            android:layout_below="@+id/textView1"
+            android:layout_toLeftOf="@+id/textViewWateringDuration"
+            android:layout_weight="1" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="00 hrs"
+            android:id="@+id/textViewLightHours"
+            android:paddingBottom="16dp"
+            android:typeface="serif"
+            android:textSize="20dp"
+            android:paddingTop="13dp"
+            android:layout_below="@+id/textView1"
+            android:layout_toRightOf="@+id/textView7"
+            android:layout_weight="7" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Light:"
+            android:id="@+id/textView4"
+            android:paddingLeft="8dp"
+            android:paddingRight="3dp"
+            android:layout_below="@+id/textView1"
+            android:layout_alignParentStart="true"
+            android:paddingBottom="16dp"
+            android:paddingTop="16dp"
+            android:layout_weight="1" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="00 hrs"
+            android:id="@+id/textViewDarkHours"
+            android:paddingBottom="16dp"
+            android:typeface="serif"
+            android:textSize="20dp"
+            android:paddingTop="13dp"
+            android:layout_alignTop="@+id/textView2"
+            android:layout_toRightOf="@+id/textView2"
+            android:layout_weight="7"
+            android:paddingRight="16dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="200dp"
+        android:layout_below="@+id/textView"
+        android:layout_alignParentStart="true"
+        android:id="@+id/tempHumidLayout"
+        android:weightSum="2">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="200dp"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="000° F"
+            android:id="@+id/textViewOverviewTemp"
+            android:gravity="center"
+            android:textSize="45dp"
+            android:typeface="serif"
+            android:paddingLeft="16dp"
+            android:paddingTop="16dp"
+            android:paddingRight="16dp"
+            android:layout_toEndOf="@+id/seekBarTemperature"
+            android:layout_alignTop="@+id/seekBarTemperature"
+            android:layout_weight="1" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="200dp"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="000 %"
+            android:id="@+id/textViewOverviewHumid"
+            android:gravity="center"
+            android:textSize="45dp"
+            android:typeface="serif"
+            android:paddingLeft="16dp"
+            android:paddingTop="16dp"
+            android:paddingRight="16dp"
+            android:layout_toStartOf="@+id/seekBarHumidity"
+            android:layout_alignTop="@+id/seekBarHumidity"
+            android:layout_alignEnd="@+id/textViewWateringDuration"
+            android:layout_above="@+id/textView1"
+            android:layout_weight="1" />
+    </LinearLayout>
 
 
 </RelativeLayout>
