CardUI applied to temperature and humidity fragments

--- a/app/src/main/res/layout/card_humidity_header.xml
+++ b/app/src/main/res/layout/card_humidity_header.xml
@@ -27,8 +27,8 @@
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="0.00° F"
-            android:id="@+id/textView_TempValue"
+            android:text="0.00%"
+            android:id="@+id/textView_HumidValue"
             android:gravity="center"
             android:textSize="55dp"
             android:typeface="serif"
