--- a/app/src/main/res/layout/card_humidity_minmax.xml
+++ b/app/src/main/res/layout/card_humidity_minmax.xml
@@ -16,8 +16,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Min Temp:"
-            android:id="@+id/textView_minTempLabel"
+            android:text="Min Humidity:"
+            android:id="@+id/textView_minHumidLabel"
             android:typeface="serif"
             android:layout_weight="1"
             android:gravity="center"
@@ -27,8 +27,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Max Temp:"
-            android:id="@+id/textView_maxTempLabel"
+            android:text="Max Humidity:"
+            android:id="@+id/textView_maxHumidLabel"
             android:typeface="serif"
             android:layout_weight="1"
             android:gravity="center"
@@ -46,8 +46,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="0.00 F"
-            android:id="@+id/textView_minTemp"
+            android:text="0.00 %"
+            android:id="@+id/textView_minHumid"
             android:typeface="serif"
             android:gravity="center|top"
             android:paddingBottom="25dp"
@@ -58,8 +58,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="0.00 F"
-            android:id="@+id/textView_maxTemp"
+            android:text="0.00 %"
+            android:id="@+id/textView_maxHumid"
             android:gravity="center|top"
             android:typeface="serif"
             android:paddingBottom="25dp"
